tests/neg/rewrite-messages.check
-- Error: tests/neg/rewrite-messages.scala:3:18 ------------------------------------------------------------------------
3 |import scala.util._  // error
  |                  ^
  |                  `_` is no longer supported for a wildcard import; use `*` instead
  |                  This construct can be rewritten automatically under -rewrite -source future-migration.
-- Error: tests/neg/rewrite-messages.scala:7:4 -------------------------------------------------------------------------
7 |  2 foo 4  // error
  |    ^^^
  |    Alphanumeric method foo is not declared infix; it should not be used as infix operator.
  |    Instead, use method syntax .foo(...) or backticked identifier `foo`.
  |    The latter can be rewritten automatically under -rewrite -deprecation.
